assets/css/main.css
---
---

@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

@layer base {
    h1 {
        @apply text-4xl;
        @apply mt-2;
        @apply mb-4;
    }
    h2 {
        @apply text-2xl;
        @apply mt-1;
        @apply mb-1;
    }
    h3 {
        @apply text-xl;
        @apply mt-1;
    }
    p {
        @apply mb-2;
        @apply font-text;   
    }
    ul {
        @apply list-disc;
        @apply list-inside;
        @apply mb-2;
    }
    ol {
        @apply list-decimal;
        @apply list-inside;
        @apply mb-2;
    }
    a {
        @apply text-blue-500;
    }
    a:hover {
        @apply underline;
    }
  }

